[gd_scene load_steps=4 format=2]

[ext_resource path="res://objective/ActivateArea.gd" type="Script" id=1]
[ext_resource path="res://asset/icon/l1.png" type="Texture" id=2]
[ext_resource path="res://asset/icon/l2.png" type="Texture" id=3]

[node name="ActivateArea" type="Area"]
monitorable = false
collision_layer = 0
collision_mask = 256
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 64.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 32.0

[node name="LIcon" type="TextureRect" parent="CenterContainer"]
margin_left = 32.0
margin_right = 96.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="L2Icon" type="TextureRect" parent="CenterContainer"]
margin_right = 128.0
margin_bottom = 64.0
texture = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_ActivateArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ActivateArea_body_exited"]
